--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
     <div id="container">
       <div class="rectangle">
         <div id="logo">Krystian Żyła</div>
-        <div id="zegar">
-          <script>
-            document.getElementById("zegar") /
-              document.getElementsByClassName("zegar")[0];
-          </script>
-        </div>
+        <div id="zegar"></div>
         <div style="clear: both"></div>
       </div>
 
