--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
       
       <div style="clear: both"></div>
       <div class="rectangle">2021 &copy; Krystian Żyła learning CSS HTML</div>
+    
     </div>
+    <img class="gifek" src="lizard.gif">
   </body>
 </html>
