--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
   <body>
     <div id="container">
       <div class="rectangle">
-        <div id="logo">Krystian Żyła</div>
+        <div id="logo">Krystian Żyła
+        
+          <div class="dropdown">
+            <button class="dropbtn">Najedź</button>
+            <div class="dropdown-content">
+              <a href="#">Link 1</a>
+              <a href="#">Link 2</a>
+              <a href="#">Link 3</a>
+            </div>
+          </div>
+        </div>
         <div id="zegar"></div>
         <div style="clear: both"></div>
       </div>
@@ -65,5 +75,9 @@
     
     </div>
     <img class="gifek" src="lizard.gif">
+   
+   
+   
+  
   </body>
 </html>
